# auto-nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  settings.json
2048/: Two048.cpp  Two048.h  game.cpp
2048-py/: Game.py  NeuralNetwork.py  TFNeuralNetwork.py  pytest.py  train.py
2048-py/components/: ProgressBar.py
2048-py/functions/: ActivationFunctions.py  Gradients.py
2048-py/log/: events.out.tfevents.1510126308.localhost.localdomain  events.out.tfevents.1510126443.localhost.localdomain  events.out.tfevents.1510126489.localhost.localdomain  events.out.tfevents.1510126572.localhost.localdomain  events.out.tfevents.1510126680.localhost.localdomain  events.out.tfevents.1510126864.localhost.localdomain
2048-py/logs/: events.out.tfevents.1510122301.localhost.localdomain  events.out.tfevents.1510122310.localhost.localdomain  events.out.tfevents.1510122447.localhost.localdomain  events.out.tfevents.1510125192.localhost.localdomain  events.out.tfevents.1510125215.localhost.localdomain  events.out.tfevents.1510125224.localhost.localdomain  events.out.tfevents.1510125243.localhost.localdomain  events.out.tfevents.1510125256.localhost.localdomain  events.out.tfevents.1510125270.localhost.localdomain  events.out.tfevents.1510125297.localhost.localdomain  events.out.tfevents.1510125408.localhost.localdomain  events.out.tfevents.1510125424.localhost.localdomain  events.out.tfevents.1510125430.localhost.localdomain  (+7 more)
Agent/: Agent.cpp  Agent.h
GA/: GA.cpp  GA.h  Genotype.cpp  Genotype.h
NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h  nn.cpp
(+7 files in other folders)
